examples/programs/invalid/addr_invalid_zone.sst
.version 1
; Invalid: zone_id=5 does not exist (only zone 0)

const_zone 0x00000005   ; zone 5
halt
